--- a/app/src/main/res/layout/activity_scroll_view.xml
+++ b/app/src/main/res/layout/activity_scroll_view.xml
@@ -12,8 +12,8 @@
         android:layout_width="match_parent"
         android:layout_height="100dp"
         android:layout_marginTop="16dp"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:layout_editor_absoluteX="39dp">
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -25,21 +25,24 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:backgroundTint="@color/black"
-                android:text="page1" />
+                android:text="page1"
+                android:textColor="@color/white" />
 
             <Button
                 android:id="@+id/p2"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:backgroundTint="@color/black"
-                android:text="page2" />
+                android:text="page2"
+                android:textColor="@color/white" />
 
             <Button
                 android:id="@+id/p3"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:backgroundTint="@color/black"
-                android:text="page3" />
+                android:text="page3"
+                android:textColor="@color/white" />
 
             <Button
                 android:id="@+id/p4"
@@ -47,7 +50,8 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:backgroundTint="@color/black"
-                android:text="page4" />
+                android:text="page4"
+                android:textColor="@color/white" />
 
             <Button
                 android:id="@+id/p5"
@@ -55,7 +59,8 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:backgroundTint="@color/black"
-                android:text="page5" />
+                android:text="page5"
+                android:textColor="@color/white" />
 
             <Button
                 android:id="@+id/p6"
@@ -63,7 +68,8 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:backgroundTint="@color/black"
-                android:text="page6" />
+                android:text="page6"
+                android:textColor="@color/white" />
         </LinearLayout>
     </HorizontalScrollView>
 
@@ -98,6 +104,7 @@
         android:layout_marginTop="11dp"
         android:backgroundTint="@color/black"
         android:text="Go"
+        android:textColor="@color/white"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/etpersonName" />
 </androidx.constraintlayout.widget.ConstraintLayout>
